<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Principal">

    <TextView
        android:id="@+id/titu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titu1"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/lstVwMateria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgVwArea"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/img_are"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/prog" />

        <TextView
            android:id="@+id/txtVwArea"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/txt_are"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>